--- a/hugo.toml
+++ b/hugo.toml
@@ -47,3 +47,7 @@ footer_tagline = "Ayudando a empresas a crecer a través de la automatización y
      name = "Contacto"
      url = "/contact"
      weight = 40
+    [[menu.main]]
+     name = "Replacer"
+     url = "/replacer/"
+     weight = 45
