Add tags to the-human-orchestrator-life-as-kubernetes.md Enable HTML in hugo.toml or create audio shortcode

--- a/hugo.toml
+++ b/hugo.toml
@@ -4,6 +4,11 @@ defaultContentLanguage = "es"
 title = "nowfreelance"
 theme = "ananke"
 
+[markup]
+  [markup.goldmark]
+    [markup.goldmark.renderer]
+      unsafe = true
+
 [languages.es]
 languageName = "Español"
 weight = 1
